--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	<a href="brief information.html">
 		<div class="no6">
-			<img src="images/IMG_2923(2).jpg">
+			<img src="images/IMG_2923.jpg">
 			<p>BRIEF<br>INFORMATION</p>
 		</div>	
 	</a>
