--- a/hobby.html
+++ b/hobby.html
@@ -39,11 +39,7 @@
 			</span>
 		</p><br>
 	<div class="b" align="center">
-		<img src="images/IMG_1000.jpg" width="28%"><img src="images/IMG_1515.jpg" width="28%" ><img src="images/IMG_20180601_200103.jpg" width="28%">
-		<br>
-		<img src="images/IMG_20180502_183405.jpg" width="28%" ><img src="images/IMG_20190624_185403.jpg" width="28%" ><img src="images/IMG_20180503_181520.jpg" width="28%">
-		<br>
-		<img src="images/canon.jpg" width="28%" ><img src="images/IMG_3040.jpg" width="28%"><img src="images/bamboo.png" width="28%" >
+		<img src="images/photos.jpg" width="60%">
 	</div>
 		<br><br>
 		<div class="devide" align="center">❤❤❤</div>
