--- a/brief information.html
+++ b/brief information.html
@@ -15,8 +15,8 @@
 	</a>
 	<div class="text">
 		<p>
-			<div class="subtitle">·ABOUT ME</div>
-			<br><img src="images/self.jpg" width="15%">
+			<div class="subtitle">·ABOUT ME</div><br>
+			<div id="self"><img src="images/self.jpg" width="18%" border=5px solid tomato></div>
 			<br><span class="first">Hi! </span>It'Lily here. I am a native of Suzhou and the photo in the homepage was shot at Chengpin Bookshop there. I'm 17 years old and going to start my final year of senior high in Xinghai Experimental Middle School.<br>
 			<span class="first">Basically,</span> I like painting, photographing and watching TV series, especially Japanese and British ones. (Detailed information is available in hobbies page.)<br>
 			<span class="first">I used</span> to keep a rabbit and it lived a long life for about 5 years, and I plan to raise a dog in the future though my mom is against it :P <br>
