--- a/collections.html
+++ b/collections.html
@@ -13,6 +13,7 @@
 	<a href="index.html">
 	<div class="button">Back to<br>homepage</div>
 	</a>
+	<div class="wechat"><img src="images/wechat.jpg" ></div>
 	<div class="text">
 		<p>		
 			<div class="subtitle">·MY SKIRTS</div>
