--- a/hobby.html
+++ b/hobby.html
@@ -36,7 +36,7 @@
 		<p>
 			<span class="text2">
 				<br><span class="first">I took</span> many photos of the sky and clouds, most at dusk and from my windowsill, in my spare time. I love to shot whatever I think is beautiful or harmony.<br> 
-				<span class="first">Meanwhile</span>, I also joined in the shcool photographing association and recorded many school activitied.
+				<span class="first">Meanwhile</span>, I also joined in the shcool photographing association and recorded many school activities.
 			</span>
 		</p><br>
 	<div class="b" align="center">
