--- a/collections.html
+++ b/collections.html
@@ -17,7 +17,7 @@
 	<div class="text">
 		<p>		
 			<div class="subtitle">·MY SKIRTS</div>
-			<br><span class="first">Do you know </span><a href="https://baike.so.com/doc/25769490-26904570.html"><span class="first">JK uniforms</span></a><span class="first">?</span>(click to learn more!)<br>
+			<br><span class="first">Do you know </span><a href="https://baike.so.com/doc/25769490-26904570.html" target="_blank"><span class="first">JK uniforms</span></a><span class="first">?</span>(click to learn more!)<br>
 			<span class="first">JK</span> is a pop word in Japan which stands for <span class="italic">girls in senior high.</span><br>
 			<span class="first">Among </span>all kinds of JK uniforms, I love collecting pleated skirts best, and I often wear them in my daily life. (Of course I can't do this when there is PE lessons. XP)<br>
 			<span class="first">My </span>mum says they are all the same but I don't think so. They are different in colour, length and layout. Design matters so much.<br>
